# GMC-Token

./: .dockerignore  .env.devnet  .env.localnet  .gitignore  .mocharc.json  .program_id  AUDITORIA_EXTERNA_PREPARACAO_FINAL.md  Anchor.toml  Cargo.toml  Dockerfile  Dockerfile.solana  EVIDENCIAS_FUNCIONAMENTO_FLUXOS.md  FINAL_GAS_OPTIMIZATION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  GAS_OPTIMIZATION_EXECUTIVE_SUMMARY.md  GAS_OPTIMIZATION_STRATEGY.md  IMPLEMENTATION_TODOS_REPORT.md  OVERHEAD_ANALYSIS_PRODUCTION.md  PLANO_TESTES_DETALHADO.md  README.md  README_SIGNATURE_TROUBLESHOOTING.md  RELATORIO_CRITICO_FINAL.md  SOLANA_NATIVE_RUST_MIGRATION_GUIDE.md  STABLE_BUILD_SOLUTION.md  TDD_TODOS_IMPLEMENTATION_ANALYSIS.md  WORKSPACE_TEMPLATE.toml  build_all.sh  build_stable.sh  cleanup_project.sh  compute_metrics_20250723_160815.json  compute_metrics_20250723_160852.json  compute_metrics_20250723_164210.json  compute_metrics_20250723_172031.json  compute_metrics_20250723_175809.json  compute_metrics_20250723_183410.json  docker-build.sh  package-lock.json  package.json  rust-toolchain.toml  setup_environment.sh  (+2 more)
.cargo/: config.toml
.devnet-keys/: admin.json  admin.pubkey  deployer.json  deployer.pubkey  gmc_staking_keypair.json  gmc_token_keypair.json  gmc_token_mint.txt  gmc_token_mint_correct.txt  gmc_treasury_keypair.json
.testnet-keys/: deployer.json  main_deployer.json  new_deployer.json  test_wallet.json
Docs/: ANCHOR_SIGNATURE_TROUBLESHOOTING.md  ARCHITECTURE.md  COMPILATION_ANALYSIS.md  COMPILATION_FIXES_PLAN.md  DEVSECOPS_CONFIGURATION.md  DEV_ENV_SETUP.md  ECOSYSTEM_SIMULATION_100K_USERS_REPORT.md  EXECUTIVE_SUMMARY.md  EXTERNAL_AUDIT_PLAN.md  FINAL_PROJECT_SUMMARY.md  FRONTEND_ENDPOINTS_GUIDE.md  GAP_ANALYSIS_CODIGO_VS_DOCS.md  GAS_OPTIMIZATION_ANALYSIS.md  GMC_PROJECT_ANALYSIS_REPORT.md  INITIAL_DEPLOYMENT_GUIDE.md  LINTER_GHOST_SOLUTION.md  MIGRATION_STRATEGY.md  RANKING_FUND_ANALYSIS.md  REACT_NEXTJS_INTEGRATION_GUIDE.md  README_FRONTEND_DOCS.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_AUDIT_PREPARATION.md  SOLUTION_SUMMARY.md  SPRINT1_GAS_OPTIMIZATION_REPORT.md  SPRINT2_ADVANCED_OPTIMIZATION_REPORT.md  SPRINT3_FINAL_RESULTS_ANALYSIS.md  SPRINT3_INTEGRATION_PLAN.md  SPRINT3_OPTIMIZATION_RESULTS.md  SYSTEM_PARAMETERS.md  TABELA_FINAL_REGRAS_STAKING.md  TABELA_MELHORADA_REGRAS_STAKING.md  TASK_NATIVE_RUST_SECURE_DEVELOPMENT.md  TODO_IMPLEMENTATION_REPORT.md  WHITEPAPER.md  WHITEPAPER_EN.md  diagrama.md  requisitos.md  tabela.md  task.md  tokenomics.md  (+3 more)
assets/: gmc-metadata.json
cleanup_backup_20250725_145155/: DEPLOY_READINESS_REPORT.md  DEPLOY_TROUBLESHOOTING.md  RELATORIO_FINAL_CONFORMIDADE.md  SECURITY_AUDIT_CHECKLIST.md  build_all.sh  cpi_batch_optimization_broken.rs  critical_tests.rs  test_affiliate_boost_360.sh  test_affiliate_system.sh  test_all_modules_critical.sh  test_basic_functionality.sh  test_ranking_system.sh  test_staking_percentage_fees.sh  test_staking_system.sh  test_vesting_system.sh  usdt_fees_validation_corrected  usdt_fees_validation_corrected.rs  usdt_fees_validation_standalone.rs  validate_final_implementation.sh  zero_copy_optimization.rs
config/: devnet.json  security_config.json  security_policy.json  testnet.json
deploy/: deploy_info.json  deploy_info_isolated.json  deploy_info_real_project.json
logs/: sol_recovery_report.txt
programs/gmc_token/: Cargo.toml
programs/gmc_token/src/: lib.rs
programs/gmc_token_native/: Cargo.toml  Cargo.toml.backup  SIMULATION_ANALYSIS.md
programs/gmc_token_native/src/: affiliate.rs  cpi_batch_optimization.rs  critical_tests.rs  lib.rs  lib_minimal.rs  penalty_tests.rs  ranking.rs  safe_math.rs  security_tests.rs  staking.rs  staking_optimized.rs  transfer_fee_tests.rs  treasury.rs  treasury_tests.rs  vesting.rs  vesting_distribution_tests.rs
programs/gmc_token_native/src/tests/: test_safe_math.rs
programs/gmc_token_native/tests/: affiliate_simulation.rs  apy_integration_tdd.rs  burn_for_boost_tdd.rs  business_rules_validation.rs  dynamic_apy_tdd.rs  ecosystem_simulation_100k_users.rs  gas_optimization_sprint1_tdd.rs  integrated_gas_optimization_test.rs  integration_tests.rs  mint_authority_revocation_tdd.rs  ranking_simulation.rs  simple_optimization_test.rs  simple_tokenomics_test.rs  staking_fees_tdd.rs  staking_simulation.rs  todos_implementation_tdd.rs  tokenomics_integration_tests.rs  transfer_fee_distribution_tdd.rs  treasury_simulation.rs  vesting_simulation.rs
reports/: FINAL_IMPLEMENTATION_REPORT.md
scripts/: README.md  add_metadata_final.js  check_linter_health.sh  check_signature_setup.ts  create_gmc_token_distribution_correct.sh  deploy-master.sh  devnet_deploy.sh  distribute_mainnet_funds.sh  executar_testes_mainnet_fixed.sh  higienizar_projeto.sh  higienizar_scripts.sh  initial_distribution.ts  load_mainnet_env.sh  mainnet_deploy_ceremony.ts  monitor_validator.sh  prepare_public_repo.sh  setup_local_tdd.sh  sol-master.sh  test_business_rules_critical.sh  test_integration_modules.sh  test_ranking_system.sh  test_staking_system.sh  test_vesting_system.sh  validate_all_business_rules.sh  vesting_setup.ts
scripts/deprecated/gmc-staking-program-old/programs/gmc_staking/: Cargo.toml
scripts/deprecated/gmc-staking-program-old/programs/gmc_staking/src/: lib.rs
scripts_backup/: agave_build_deploy.sh  build_deploy_complete_gmc.sh  build_minimal.sh  build_native_secure.sh  build_sbfv1_compatible.sh  (+6 more)
(+145 files in other folders)
