[workspace]
members = [
    "programs/gmc_token",
    "programs/gmc_staking",
    "programs/gmc_ranking",
    "programs/gmc_vesting",
    "programs/gmc_treasury"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = { version = "*", features = ["no-entrypoint"] }
spl-token-2022 = { version = "~6", features = ["no-entrypoint"] }
spl-associated-token-account = "*"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1