# 🛡️ GMC Token Native Rust Workspace - Security First

[workspace]
# Use resolver v2 to avoid lockfile issues with cargo-build-sbf
resolver = "2"
members = [
    "programs/gmc_token_native"
]

# 🚀 OPTIMIZED DEPENDENCIES FOR COMPUTE UNITS REDUCTION
[workspace.dependencies]
solana-program = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.61"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
borsh = "1.5.7"
num-traits = "0.2"
num-derive = "0.4"
solana-program-test = "1.18.26"
solana-sdk = "1.18.26"

# 🚀 ZERO-COPY SERIALIZATION OPTIMIZATION
bytemuck = { version = "1.18.0", features = ["derive", "extern_crate_alloc"] }
zerocopy = { version = "0.8.26", features = ["derive"] }


# 🚀 OPTIMIZED BUILD PROFILES FOR COMPUTE UNITS REDUCTION
[profile.release]
opt-level = 'z'              # Optimize for size (fewer instructions = fewer CUs)
strip = "symbols"            # Remove debug symbols
overflow-checks = false      # 🚀 OPTIMIZATION: Remove runtime overflow checks 
lto = "fat"                  # Full Link Time Optimization
codegen-units = 1            # Better optimization with single unit
panic = "abort"              # Smaller binary size
debug = false                # Remove debug info
debug-assertions = false     # Remove debug assertions
incremental = false          # Disable incremental compilation for better optimization
rpath = false               # Reduce binary size

# 🚀 AGGRESSIVE OPTIMIZATION for all dependencies
[profile.release.package."*"]
opt-level = 'z'
overflow-checks = false
debug-assertions = false
