[package]
name = "gmc_token_native"
version = "1.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# Versões específicas para máxima compatibilidade SBPF v1
solana-program = "=1.17.31"
borsh = "=0.9.3"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
# Removido solana-program-test para evitar conflitos de dependência
# solana-program-test = "=1.17.31"
